--- a/bista_sale/views/artwork_status_view.xml
+++ b/bista_sale/views/artwork_status_view.xml
@@ -8,7 +8,8 @@
             <form>
                 <sheet>
                     <group>
-                        <field name="name" />                      
+                        <field name="name" />
+                        <field name="active" invisible="1"/>
                     </group>
                 </sheet>
             </form>
@@ -20,7 +21,8 @@
         <field name="model">artwork.status</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name" />               
+                <field name="name" />
+                <field name="active" invisible="1"/>
             </tree>
         </field>
     </record>
