--- a/bista_sale/views/journal_customization_view.xml
+++ b/bista_sale/views/journal_customization_view.xml
@@ -8,7 +8,11 @@
             <form>
                 <sheet>
                     <group>
-                        <field name="name" />                      
+                        <field name="name"/>
+                        <field name="active" invisible="1"/>
+                    </group>
+                    <group>
+                        <field name="color" widget="color_picker"/>
                     </group>
                 </sheet>
             </form>
@@ -20,7 +24,8 @@
         <field name="model">journal.customization</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name" />               
+                <field name="name"/>
+                <field name="active" invisible="1"/>
             </tree>
         </field>
     </record>
