--- a/bista_sales_approval/views/sale_order_approval_button_view.xml
+++ b/bista_sales_approval/views/sale_order_approval_button_view.xml
@@ -5,30 +5,23 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form" />
         <field name="arch" type="xml">
-            <xpath expr="//header//button[@name='action_quotation_send'][4]" position="attributes">
-                <attribute name="states">sent,sale</attribute>
-            </xpath>
-            <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
-                <field name="check_price_over_minimum" force_save="1" invisible="1" />
-            </xpath>
-            <xpath expr="//field[@name='order_line']/tree" position="attributes">
-                <attribute name="decoration-danger">check_price_over_minimum == True</attribute>
-            </xpath>
             <button name="action_cancel" position="attributes">
-                <attribute name="attrs">{"invisible": [("state", "not in", ["done", "cancel"])]}</attribute>
+                <attribute name="attrs">{"invisible": [("state", "in", ["done", "cancel"])]}</attribute>
             </button>
-            <xpath expr="//header//button[@name='action_quotation_send'][1]" position="after">
+            <xpath expr="//button[@name='action_quotation_send']" position="attributes">
+                <attribute name="states">quote_confirm</attribute>
+            </xpath>
+            <xpath expr="//button[@name='action_quotation_send']" position="after">
+                <button name="action_send_quote_approval" string="Send For Approval Quotation" type="object" class="btn-primary" states="draft" />
+                <button name="action_quote_confirm" string="Confirm Quotation" type="object" class="btn-primary" states="draft" />
+                <button name="action_quote_confirm" string="Approve" type="object" states="quote_approval"
+                    groups="bista_sales_approval.group_sale_approval_admin" class="btn-primary" />
                 <button name="action_send_for_approval" string="Send For Approval" type="object" class="btn-primary"
-                    attrs="{'invisible': [('state', 'not in', ['draft', 'sent', 'customer_approved'])]}" />
-                <button name="action_approve_minimum_price" string="Approve Price" type="object" class="btn-primary"
-                    confirm="Are you sure you want to approve the sale price?"
-                    states="min_price_review" groups="bista_sales_approval.group_approve_product_price" />
+                    attrs="{'invisible': [('state', 'not in', ['quote_confirm', 'sent', 'customer_approved'])]}" />
                 <button name="action_approval" string="Approve" type="object" states="pending_for_approval"
                     groups="bista_sales_approval.group_sale_approval_admin" class="btn-primary" />
-                <button name="action_reject" string="Reject" type="object" states="pending_for_approval"
+                <button name="action_reject" string="Reject" type="object" states="quote_approval,pending_for_approval"
                     groups="bista_sales_approval.group_sale_approval_admin" class="btn-primary" />
-                <button name="action_reject" string="Reject" type="object" states="min_price_review"
-                    groups="bista_sales_approval.group_approve_product_price" class="btn-primary" />
             </xpath>
             <xpath expr="//header/button[@name='action_confirm'][2]" position="attributes">
                 <attribute name="invisible">1</attribute>
@@ -40,8 +33,7 @@
                 <page name="sale_approval_log_ids" string="Approval Status">
                     <field name="sale_approval_log_ids">
                         <tree string="Approval Status" editable="top" create="0" delete="0">
-                            <field name="sale_id" invisible="1" readonly="1" />
-                            <field name="action_user_id" readonly="1" options="{'no_open':True}" />
+                            <field name="action_user_id" readonly="1" options="{'no_open': True}" />
                             <field name="action_date" readonly="1" />
                             <field name="done_action" readonly="1" />
                             <field name="note" readonly="1" />
@@ -55,8 +47,8 @@
     <record id="sale_order_sale_manager_editable" model="ir.ui.view">
         <field name="name">Sale order Salesperson Edit Right</field>
         <field name="model">sale.order</field>
-        <field name="groups_id" eval="[(4,ref('bista_sales_approval.group_sale_approval_admin'))]" />
         <field name="inherit_id" ref="sale.view_order_form" />
+        <field name="groups_id" eval="[(4, ref('bista_sales_approval.group_sale_approval_admin'))]" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']" position="attributes">
                 <attribute name="attrs">
