--- a/bista_sales_approval/views/sale_order_approval_button_view.xml
+++ b/bista_sales_approval/views/sale_order_approval_button_view.xml
@@ -58,11 +58,24 @@
         </field>
     </record>
 
+    <record id="sale_order_view_search_quotation_approval" model="ir.ui.view">
+        <field name="name">sale.order.inherit.approval</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.sale_order_view_search_inherit_quotation" />
+        <field name="arch" type="xml">
+            <filter name="draft" position="after">
+                <filter string="Quotation Approval" name="quote_approval" domain="[('state', '=', 'quote_approval')]"/>
+                <filter string="Quotation Confirmed" name="quote_confirm" domain="[('state', '=', 'quote_confirm')]"/>
+                <filter string="Pending for Approval" name="order_approval" domain="[('state', '=', 'pending_for_approval')]"/>
+            </filter>
+        </field>
+    </record>
+
     <record id="to_approve_sale_orders" model="ir.actions.act_window">
         <field name="name">Sale Orders To Approve</field>
         <field name="res_model">sale.order</field>
         <field name="view_id" ref="sale.view_quotation_tree" />
-        <field name="domain">[('state', 'in', ['pending_for_approval'])]</field>
+        <field name="domain">[("state", "in", ["quote_approval", "pending_for_approval"])]</field>
     </record>
 
     <menuitem id="pending_for_approval_orders" action="to_approve_sale_orders" name="Quotations To Approve" parent="sale.sale_order_menu" groups="bista_sales_approval.group_sale_approval_admin" />
