[IMP] Added form view for shipment tracking line

--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -40,8 +40,7 @@
                                 <field name="checkbox" string="All pending to shipped" attrs="{'readonly': [('is_read_only', '=', True)]}" />
                             </group>
                             <field name="tracking_line_ids" attrs="{'readonly': [('is_read_only', '=', True)]}">
-                                <tree editable="bottom" create="0" delete="0" default_order="ship_qty desc">
-<!--                                    <field name="checkbox" nolabel="1" />-->
+                                <tree create="0" delete="0" default_order="ship_qty desc">
                                     <field name="po_line_id" readonly="1" force_save="1" />
                                     <field name="default_code" optional="show" />
                                     <field name="ordered_qty" />
@@ -49,6 +48,15 @@
                                     <field name="pending_shipment_qty" />
                                     <field name="ship_qty" />
                                 </tree>
+                                <form>
+                                    <group>
+                                        <field name="default_code" />
+                                        <field name="ordered_qty" />
+                                        <field name="received_qty" />
+                                        <field name="pending_shipment_qty" />
+                                        <field name="ship_qty" />
+                                    </group>
+                                </form>
                             </field>
                         </page>
                     </notebook>
