--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -104,6 +104,7 @@
             <span style="font-size:20px;">
                 <strong>Product Details</strong>
             </span>
+            <t t-set="line_taxes" t-value="any(line.tax_id for line in doc.order_line)"/>
         </xpath>
         <xpath expr="//thead" position="replace">
             <thead>
@@ -126,7 +127,9 @@
                     <th style=" border-collapse: collapse;
                    border: none;" name="th_priceunit" class="text-center">Price
                     </th>
-                    <th name="th_taxes" class="text-right">Taxes</th>
+                    <th name="th_taxes" t-if="line_taxes"  class="text-center" style=" border-collapse: collapse;border: none;">
+                        <span>Taxes</span>
+                    </th>
                     <th style=" border-collapse: collapse;
                    border: none;padding-left:15px;" name="th_subtotal" class="text-right">
                         <span groups="account.group_show_line_subtotals_tax_excluded">
@@ -159,10 +162,10 @@
                              style="max-height:100px; max-width:100px;"/>
                     </t>
                     <t t-else="">
-                         <img src="/web/static/img/placeholder.png" style="max-height:100px; max-width:100px;"/>
+                        <img src="/web/static/img/placeholder.png" style="max-height:100px; max-width:100px;"/>
                     </t>
                 </td>
-                <td name="td_name" style="width:30%; border-top: 1px solid black; border-left: none;
+                <td name="td_name" style="width:20%; border-top: 1px solid black; border-left: none;
                 border-right: none; border-bottom: 1px solid black;">
                     <b>
                         <span t-field="line.product_id.name"/>
@@ -211,9 +214,10 @@
                         </t>
                     </span>
                 </td>
-                <td name="td_taxes" class="text-right">
-                    <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.tax_id))"/>
-                </td>
+                    <td t-if="line_taxes" name="td_taxes" class="text-center" style="border-top: 1px solid black; border-left: none;
+                     border-right: none; border-bottom: 1px solid black;">
+                        <span t-esc="', '.join(map(lambda x: (x.name), line.tax_id))"/>
+                    </td>
                 <td style="border-top: 1px solid black; border-left: none;
                 border-right: none; border-bottom: 1px solid black;"
                     name="td_subtotal" class="text-right">
