--- a/bista_sale_multi_ship/report/shipment_report_view.xml
+++ b/bista_sale_multi_ship/report/shipment_report_view.xml
@@ -127,7 +127,7 @@
                                     <td name="td_name"
                                         style="width:30%; border-top: 1px solid black; border-left: none;border-right: none; border-bottom: 1px solid black;">
                                         <b>
-                                            <span t-field="line.product_id.name"/>
+                                            <span t-field="line.so_line_id.name"/>
                                         </b>
                                         <br/>
                                         <span t-field="line.product_id.default_code"/>
